--- a/my project/codes/bilal.html
+++ b/my project/codes/bilal.html
@@ -3,10 +3,10 @@
   <head>
     <title>Bilal Monthly</title>
 
-    <link rel="stylesheet" href="/my project/codes/genral.css">
-    <link rel="stylesheet" href="/my project/codes/header-bilal.css">
-    <link rel="stylesheet" href="/my project/codes/sidebar-bilal.css">
-    <link rel="stylesheet" href="/my project/codes/main-bilal.css">
+    <link rel="stylesheet" href="/genral.css">
+    <link rel="stylesheet" href="/header-bilal.css">
+    <link rel="stylesheet" href="/sidebar-bilal.css">
+    <link rel="stylesheet" href="/main-bilal.css">
   </head>
   <body>
     <header id="header" class="header">
